--- a/package.json
+++ b/package.json
@@ -3,60 +3,60 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@babel/core": "7.7.4",
-        "@svgr/webpack": "4.3.3",
-        "@typescript-eslint/eslint-plugin": "^2.8.0",
-        "@typescript-eslint/parser": "^2.8.0",
-        "babel-eslint": "10.0.3",
-        "babel-jest": "^24.9.0",
-        "babel-loader": "8.0.6",
+        "@babel/core": "7.10.4",
+        "@svgr/webpack": "5.4.0",
+        "@typescript-eslint/eslint-plugin": "^3.6.0",
+        "@typescript-eslint/parser": "^3.6.0",
+        "babel-eslint": "10.1.0",
+        "babel-jest": "^26.1.0",
+        "babel-loader": "8.1.0",
         "babel-plugin-named-asset-import": "^0.3.5",
         "babel-preset-react-app": "^9.1.0",
         "bootstrap": "^4.4.1",
-        "camelcase": "^5.3.1",
-        "case-sensitive-paths-webpack-plugin": "2.2.0",
-        "css-loader": "3.2.0",
+        "camelcase": "^6.0.0",
+        "case-sensitive-paths-webpack-plugin": "2.3.0",
+        "css-loader": "3.6.0",
         "dotenv": "8.2.0",
         "dotenv-expand": "5.1.0",
         "eslint-config-react-app": "^5.1.0",
-        "eslint-loader": "3.0.2",
-        "eslint-plugin-flowtype": "3.13.0",
-        "eslint-plugin-jsx-a11y": "6.2.3",
-        "file-loader": "4.3.0",
-        "fs-extra": "^8.1.0",
-        "html-webpack-plugin": "4.0.0-beta.5",
+        "eslint-loader": "4.0.2",
+        "eslint-plugin-flowtype": "5.2.0",
+        "eslint-plugin-jsx-a11y": "6.3.1",
+        "file-loader": "6.0.0",
+        "fs-extra": "^9.0.1",
+        "html-webpack-plugin": "4.3.0",
         "identity-obj-proxy": "3.0.0",
-        "jest": "24.9.0",
-        "jest-environment-jsdom-fourteen": "0.1.0",
-        "jest-resolve": "24.9.0",
-        "jest-watch-typeahead": "0.4.2",
-        "lodash": "^4.17.11",
-        "mini-css-extract-plugin": "0.8.0",
+        "jest": "26.1.0",
+        "jest-environment-jsdom-fourteen": "1.0.1",
+        "jest-resolve": "26.1.0",
+        "jest-watch-typeahead": "0.6.0",
+        "lodash": "^4.17.19",
+        "mini-css-extract-plugin": "0.9.0",
         "optimize-css-assets-webpack-plugin": "5.0.3",
-        "pnp-webpack-plugin": "1.5.0",
-        "postcss-flexbugs-fixes": "4.1.0",
+        "pnp-webpack-plugin": "1.6.4",
+        "postcss-flexbugs-fixes": "4.2.1",
         "postcss-loader": "3.0.0",
-        "postcss-normalize": "8.0.1",
+        "postcss-normalize": "9.0.0",
         "postcss-preset-env": "6.7.0",
-        "postcss-safe-parser": "4.0.1",
+        "postcss-safe-parser": "4.0.2",
         "react": "^16.12.0",
         "react-app-polyfill": "^1.0.5",
-        "react-bootstrap": "^1.0.0-beta.16",
+        "react-bootstrap": "^1.1.1",
         "react-dev-utils": "^10.0.0",
         "react-dom": "^16.12.0",
-        "resolve": "1.12.2",
+        "resolve": "1.17.0",
         "resolve-url-loader": "3.1.1",
-        "sass-loader": "8.0.0",
-        "semver": "6.3.0",
-        "style-loader": "1.0.0",
+        "sass-loader": "9.0.2",
+        "semver": "7.3.2",
+        "style-loader": "1.2.1",
         "styled-components": "^5.0.0",
-        "terser-webpack-plugin": "2.2.1",
-        "ts-pnp": "1.1.5",
-        "url-loader": "2.3.0",
-        "webpack": "4.41.2",
-        "webpack-dev-server": "3.9.0",
+        "terser-webpack-plugin": "3.0.6",
+        "ts-pnp": "1.2.0",
+        "url-loader": "4.1.0",
+        "webpack": "4.43.0",
+        "webpack-dev-server": "3.11.0",
         "webpack-manifest-plugin": "2.2.0",
-        "workbox-webpack-plugin": "4.3.1"
+        "workbox-webpack-plugin": "5.1.3"
     },
     "scripts": {
         "start": "node scripts/start.js",
@@ -137,15 +137,15 @@
         ]
     },
     "devDependencies": {
-        "eslint": "^7.3.0",
+        "eslint": "^7.4.0",
         "eslint-config-prettier": "^6.11.0",
         "eslint-config-standard": "^14.1.1",
-        "eslint-plugin-babel": "^5.3.0",
-        "eslint-plugin-import": "^2.21.2",
+        "eslint-plugin-babel": "^5.3.1",
+        "eslint-plugin-import": "^2.22.0",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^4.2.1",
-        "eslint-plugin-react": "^7.20.0",
-        "eslint-plugin-react-hooks": "^4.0.4",
+        "eslint-plugin-react": "^7.20.3",
+        "eslint-plugin-react-hooks": "^4.0.6",
         "eslint-plugin-standard": "^4.0.1",
         "prettier": "^2.0.5"
     }
