--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@types/node": "^14.0.27",
         "@types/react": "^16.9.46",
         "@types/react-dom": "^16.9.8",
+        "@types/styled-components": "^5.1.2",
         "bootstrap": "^4.5.2",
         "husky": "^4.2.5",
         "lint-staged": "^10.2.11",
@@ -40,7 +41,9 @@
         ]
     },
     "devDependencies": {
-        "prettier": "^2.0.5"
+        "babel-plugin-styled-components": "^1.11.1",
+        "prettier": "^2.0.5",
+        "typescript-plugin-styled-components": "^1.4.4"
     },
     "husky": {
         "hooks": {
