--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "@types/jest": "^26.0.9",
+        "@types/lodash": "^4.14.159",
         "@types/node": "^14.0.27",
         "@types/react": "^16.9.46",
         "@types/react-dom": "^16.9.8",
@@ -23,7 +24,8 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "lint": "tsc"
     },
     "eslintConfig": {
         "extends": "react-app"
