Fixed broken links and updated react-scripts to 4.0.0

--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "4.0.0",
     "styled-components": "^5.1.1",
     "typescript": "^3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom-fourteen",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "tsc",
     "storybook": "start-storybook -p 6006 -s public",
@@ -58,7 +58,6 @@
     "@storybook/preset-create-react-app": "^3.1.4",
     "@storybook/preset-typescript": "^3.0.0",
     "@storybook/react": "^6.0.26",
-    "babel-loader": "^8.1.0",
     "babel-plugin-styled-components": "^1.11.1",
     "fork-ts-checker-webpack-plugin": "^5.2.0",
     "jest-styled-components": "^7.0.3",
