--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "build": "vite build",
     "preview": "vite preview",
     "test": "jest",
-    "lint": "tsc"
+    "lint": "tsc",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
@@ -37,7 +39,15 @@
     "@babel/preset-env": "^7.25.8",
     "@babel/preset-react": "^7.25.7",
     "@babel/preset-typescript": "^7.25.7",
+    "@chromatic-com/storybook": "^3.2.5",
     "@jest/globals": "^29.7.0",
+    "@storybook/addon-essentials": "^8.6.3",
+    "@storybook/addon-onboarding": "^8.6.3",
+    "@storybook/blocks": "^8.6.3",
+    "@storybook/experimental-addon-test": "^8.6.3",
+    "@storybook/react": "^8.6.3",
+    "@storybook/react-vite": "^8.6.3",
+    "@storybook/test": "^8.6.3",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.2",
     "@testing-library/react": "^16.0.1",
@@ -46,16 +56,21 @@
     "@types/lodash": "^4.17.12",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "@vitest/browser": "^3.0.7",
+    "@vitest/coverage-v8": "^3.0.7",
     "babel-jest": "^29.7.0",
     "babel-plugin-styled-components": "^2.1.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-fixed-jsdom": "^0.0.6",
     "msw": "^2.4.13",
+    "playwright": "^1.50.1",
     "prettier": "^3.3.3",
+    "storybook": "^8.6.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
-    "vite": "^5.4.9"
+    "vite": "^5.4.9",
+    "vitest": "^3.0.7"
   },
   "packageManager": "yarn@4.5.0",
   "msw": {
