--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "@tanstack/react-query-devtools": "^5.67.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "styled-components": "^6.1.15",
     "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
@@ -60,7 +59,6 @@
     "@vitest/browser": "^3.0.7",
     "@vitest/coverage-v8": "^3.0.7",
     "babel-jest": "^29.7.0",
-    "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react": "^7.37.4",
     "globals": "^16.0.0",
@@ -68,8 +66,10 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-fixed-jsdom": "^0.0.9",
     "msw": "^2.7.3",
+    "msw-storybook-addon": "^2.0.4",
     "playwright": "^1.50.1",
     "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "storybook": "^8.6.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2",
